--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ litestar = "^2.0.0b4"
 uvicorn = "^0.23.1"
 httpx = {extras = ["cli"], version = "^0.24.1"}
 pydantic = "^2.0.3"
+msgspec = {git = "https://github.com/jcrist/msgspec.git"}
 
 
 [build-system]
